Openapi docs updated
